Add view for log evaluation